added icons for navigation items

--- a/app/src/main/res/menu/nav_items.xml
+++ b/app/src/main/res/menu/nav_items.xml
@@ -4,22 +4,27 @@
     <item
         android:id="@+id/bottom_nav_home"
         android:title="@string/nav_home"
+        android:icon="@drawable/icon_nav_home"
         />
     <item
         android:id="@+id/bottom_nav_explore"
         android:title="@string/nav_explore"
+        android:icon="@drawable/icon_nav_explore"
         />
     <item
         android:id="@+id/bottom_nav_gallery"
         android:title="@string/nav_gallery"
+        android:icon="@drawable/icon_nav_gallery"
         />
     <item
         android:id="@+id/bottom_nav_notifications"
         android:title="@string/nav_notifications"
+        android:icon="@drawable/icon_nav_notifications"
         />
     <item
         android:id="@+id/bottom_nav_me"
         android:title="@string/nav_me"
+        android:icon="@drawable/icon_nav_me"
         />
 
 </menu>
