--- a/app/src/main/res/layout/activity_navigation.xml
+++ b/app/src/main/res/layout/activity_navigation.xml
@@ -7,6 +7,23 @@
     android:layout_height="match_parent"
     tools:context="com.myproject.android.iglayout.NavigationActivity">
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/nav_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:contentInsetStart="0dp"
+        android:contentInsetLeft="0dp"
+        app:contentInsetStart="0dp"
+        app:contentInsetLeft="0dp"
+        android:background="@color/White">
+
+        <ViewStub
+            android:id="@+id/toolbar_stub"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+    </android.support.v7.widget.Toolbar>
+
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/navigation"
         android:layout_width="match_parent"
@@ -18,6 +35,7 @@
         android:id="@+id/nav_frame"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@id/navigation"/>
+        android:layout_above="@id/navigation"
+        android:layout_below="@id/nav_toolbar"/>
 
 </RelativeLayout>
