layout for home's toolbar finished

--- a/app/src/main/res/layout/activity_navigation.xml
+++ b/app/src/main/res/layout/activity_navigation.xml
@@ -29,7 +29,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        app:menu="@menu/nav_items"/>
+        app:menu="@menu/nav_items"
+        android:background="@color/White"/>
 
     <FrameLayout
         android:id="@+id/nav_frame"
