--- a/app/src/main/res/layout/layout_toolbar_home.xml
+++ b/app/src/main/res/layout/layout_toolbar_home.xml
@@ -4,4 +4,31 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ImageButton
+        android:id="@+id/toolbar_home_camera"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:src="@drawable/icon_toolbar_home_camera"
+        android:background="@color/White"/>
+
+    <ImageView
+        android:id="@+id/toolbar_home_logo"
+        android:layout_width="300dp"
+        android:layout_height="30dp"
+        android:layout_centerInParent="true"
+        android:src="@drawable/icon_toolbar_home_title"/>
+
+    <ImageButton
+        android:id="@+id/toolbar_home_directmessage"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_alignParentEnd="true"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:src="@drawable/icon_toolbar_home_directmessage"
+        android:background="@color/White"/>
+
 </RelativeLayout>
