--- a/app/src/main/res/layout/activity_navigation.xml
+++ b/app/src/main/res/layout/activity_navigation.xml
@@ -10,19 +10,12 @@
     <android.support.v7.widget.Toolbar
         android:id="@+id/nav_toolbar"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
+        android:layout_height="?android:attr/actionBarSize"
         android:contentInsetStart="0dp"
         android:contentInsetLeft="0dp"
         app:contentInsetStart="0dp"
         app:contentInsetLeft="0dp"
-        android:background="@color/White">
-
-        <ViewStub
-            android:id="@+id/toolbar_stub"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
-    </android.support.v7.widget.Toolbar>
+        android:background="@color/White"/>
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/navigation"
