--- a/app/src/main/res/layout/layout_toolbar_notifications.xml
+++ b/app/src/main/res/layout/layout_toolbar_notifications.xml
@@ -2,16 +2,16 @@
 <android.support.design.widget.TabLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent">
 
     <android.support.design.widget.TabItem
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:text="Following" />
+        android:layout_height="wrap_content"
+        android:text="@string/notifications_following" />
 
     <android.support.design.widget.TabItem
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:text="You" />
+        android:layout_height="wrap_content"
+        android:text="@string/notifications_you" />
 
 </android.support.design.widget.TabLayout>
